--- a/asist/routeGenerator.ipynb
+++ b/asist/routeGenerator.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6539a3ba-9de7-4c63-8956-8a6ac39ed291",
+   "metadata": {},
+   "source": [
+    "# Route Generator that takes in Trained Model and the Saturn Map and outputs optimal path and related time/distance analysis/plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0a858316",
@@ -20,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x134cf0d2470>"
+       "<torch._C.Generator at 0x221ef2c8e70>"
       ]
      },
      "execution_count": 2,
@@ -48,6 +56,14 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "torch.manual_seed(1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96cc10b6-f79d-43a9-89a6-94d251917552",
+   "metadata": {},
+   "source": [
+    "### Specify related path"
    ]
   },
   {
@@ -88,6 +104,7 @@
     }
    ],
    "source": [
+    "# Load trained medic and engineer model\n",
     "medic_model_, _ = load_model(medic_model_path)\n",
     "engineer_model_, args = load_model(engineer_model_path)"
    ]
@@ -122,16 +139,27 @@
     "\n",
     "\n",
     "    def loadSMData(self, sm_json_file):\n",
+    "        \"\"\" Load Semantic Map data\n",
+    "        :param sm_json_file: the path of the semantic map data\n",
+    "        \"\"\"\n",
     "        with open(sm_data_path) as sm_json_file:\n",
     "            self.sm_data = json.load(sm_json_file)\n",
     "\n",
     "    def loadRouteModel(self, medic=None, engineer=None):\n",
+    "        \"\"\" Load medic model and engineer model, could done this sepearately\n",
+    "        :param medic: trained medic model\n",
+    "        :param engineer: trained engineer model\n",
+    "        \"\"\"\n",
     "        assert medic is not None or engineer is not None, \"need to load at least one model\"\n",
     "        medic_model, _ = load_model(medic) if medic is not None else None\n",
     "        engineer_model, _ = load_model(engineer) if engineer is not None else None\n",
     "        return medic_model, engineer_model\n",
     "\n",
     "    def get_ordered_node_list(self):\n",
+    "        \"\"\" sort objective nodes in the followering order\n",
+    "            For medic: depot + normal victims + high-value victims\n",
+    "            For engineer: depot + normal victims blocked by rubbles + victims blocked by freeze plates + high-value victims\n",
+    "        \"\"\"\n",
     "        victim_list_copy = self.graph.victim_list.copy()\n",
     "        rubble_victims = []\n",
     "        freeze_plate_victims = []\n",
@@ -152,12 +180,7 @@
     "        self.node_list = [self.graph[self.depot_room_id]] + self.victim_list\n",
     "        \n",
     "        self.engineer_node_list = [self.graph[self.depot_room_id]] + rubble_victims + freeze_plate_victims + high_value_victims\n",
-    "#         self.engineer_node_list = [self.graph[self.depot_room_id]] + \\\n",
-    "#                                 victim_list_reordered[:self.RUBBLE_GRAPH_SIZE] + \\\n",
-    "#                                 victim_list_reordered[-self.HIGH_VALUE_VICTIM_SIZE:]\n",
-    "#         print('*' * 30)\n",
-    "#         for jjj in self.engineer_node_list:\n",
-    "#             print(jjj.id)\n",
+    "\n",
     "\n",
     "    def remove_saved_victims(self):\n",
     "        save_before_change = [(-2148, 55), (-2132, 17), (-2126, 13), (-2128, 19), (-2133, 22), (-2090, 23), (-2093, 52), (-2108, 13), (-2094, 34), (-2092, 30), (-2089, 57), (-2088, 48), (-2099, 38), (-2094, 3), (-2098, 4), (-2178, 1), (-2195, -1), (-2193, -1), (-2197, -1), (-2216, 12), (-2216, 13)]\n",
@@ -190,10 +213,12 @@
     "                                rubble_node_list + \\\n",
     "                                [self.graph['vg10']] + [self.graph['vy4']]\n",
     "        \n",
-    "#         print(self.node_list)\n",
-    "#         print(self.engineer_node_list)\n",
     "\n",
     "    def translate2D01space(self, dump_pkl=None):\n",
+    "        \"\"\" Translate objective nodes to distance matrix\n",
+    "            and then use mMDS and JLT to turn it into 2D[0-1] space\n",
+    "        :param dump_pkl: the pickle file to store data after the transformation\n",
+    "        \"\"\"\n",
     "        D = get_distance_matrix_original(self.graph, self.node_list)\n",
     "        higher = distance_matrix_to_coordinate(D)\n",
     "        lower = np.array(jl_transform(higher, 2, seed=self.jl_transform_seed))\n",
@@ -225,6 +250,9 @@
     "                pickle.dump(cord2D_obj, f)\n",
     "\n",
     "    def get_medic_tour_index(self, medic_pickle='saturn_A_1.5_medic.pkl'):\n",
+    "        \"\"\" run medic model to get medic path in node index form, node list is ordered node list\n",
+    "        :param medic_pickle: the pickle file that sores \n",
+    "        \"\"\"\n",
     "        PCVRP.switch_player_role(\"medic\")\n",
     "        medic_dataset = PCVRP.make_dataset(size=self.medic_graph_size, filename=medic_pickle)\n",
     "\n",
@@ -243,6 +271,9 @@
     "        return medic_tours[0], medic_dataset[0]\n",
     "\n",
     "    def get_engineer_tour_index(self, medic_tour_index, medic_instance):\n",
+    "        \"\"\" run medic model to get medic path in node index form, node list is ordered node list\n",
+    "        :param medic_pickle: the pickle file that sores \n",
+    "        \"\"\"\n",
     "        PCVRP.switch_player_role(\"engineer\")\n",
     "        engineer_instance = medic_instance.copy()\n",
     "        engineer_instance['medic_tour'] = medic_tour_index.unsqueeze(0)\n",
@@ -734,17 +765,8 @@
     "                \"data\": {\n",
     "                    \"medic\": medic_path,\n",
     "                    \"engineer\": engineer_path,\n",
-    "                }}, json_file, indent=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f4fc5ef7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class RouteGen(RouteGen):\n",
+    "                }}, json_file, indent=2)\n",
+    "            \n",
     "    def get_event_list(self, path_ids, role='medic'):\n",
     "        curr_length = 0\n",
     "        curr_time = 0\n",
@@ -1513,27 +1535,22 @@
     "#                     log_str = f\"Medic has triaged normal victim {medic_events[mei].upper()}, cost {medic_time:.1f}s\"\n",
     "#                 elif medic_action == 'med_yellow':\n",
     "#                     log_str = f\"Medic has triaged high-value victim {medic_events[mei].upper()}, cost {medic_time:.1f}s\"\n",
-    "#                 log_list.append((medic_total_time, 'MEDI', log_str))\n",
-    "                    \n",
-    "                \n",
-    "                \n",
-    "                \n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "            \n",
-    "        \n",
-    "            "
+    "#                 log_list.append((medic_total_time, 'MEDI', log_str))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4fc5ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "id": "2216f59d",
    "metadata": {
-    "scrolled": false,
     "tags": []
    },
    "outputs": [
@@ -1858,13 +1875,7 @@
       "BEST: 1087  -1.05  6.66  862.32\n",
       "863.1645092379532 1156.3913368289686 767.8590909666176\n",
       "CURR: 2281  -1.89  5.59  1156.39 Good Rate:0.02 Avg Time:1189.26 Earlist Yellow:607.52 EY Seed:1588\n",
-      "BEST: 1087  -1.05  6.66  862.32\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "BEST: 1087  -1.05  6.66  862.32\n",
       "925.0060378129497 1239.896965167173 922.452939407559\n",
       "CURR: 2348  -3.50  4.21  1239.90 Good Rate:0.02 Avg Time:1190.36 Earlist Yellow:607.52 EY Seed:1588\n",
       "BEST: 1087  -1.05  6.66  862.32\n",
@@ -1996,13 +2007,7 @@
       "BEST: 1087  -1.05  6.66  862.32\n",
       "1004.2859292843337 1344.5780796603444 995.8841757525971\n",
       "CURR: 4072  -2.53  5.10  1344.58 Good Rate:0.02 Avg Time:1184.05 Earlist Yellow:607.52 EY Seed:1588\n",
-      "BEST: 1087  -1.05  6.66  862.32\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "BEST: 1087  -1.05  6.66  862.32\n",
       "913.2977325991155 1301.7949174067537 956.0631077755913\n",
       "CURR: 4157  -1.13  6.61  1301.79 Good Rate:0.02 Avg Time:1185.36 Earlist Yellow:607.52 EY Seed:1588\n",
       "BEST: 1087  -1.05  6.66  862.32\n",
@@ -2224,9 +2229,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "d513d048",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3851,7 +3854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
